<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_title_layout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lablel_call"
        android:layout_marginLeft="@dimen/size_dp_15"
        android:layout_marginTop="@dimen/size_dp_5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_1"
        android:background="@color/color_2ead4d"
        android:layout_marginTop="@dimen/size_dp_5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/size_dp_70"
            android:layout_height="@dimen/size_dp_70"
            android:src="@mipmap/ic_pickup_icon"
            android:layout_marginTop="@dimen/size_dp_15"
            android:layout_marginBottom="@dimen/size_dp_10"
            android:onClick="inCome"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/size_dp_70"
            android:layout_height="@dimen/size_dp_70"
            android:src="@mipmap/ic_handup_icon"
            android:layout_marginTop="@dimen/size_dp_15"
            android:layout_marginBottom="@dimen/size_dp_10"
            android:onClick="pickUp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_1"
        android:background="@color/color_2ead4d"
        android:layout_marginTop="@dimen/size_dp_5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lablel_message"
        android:layout_marginLeft="@dimen/size_dp_15"
        android:layout_marginTop="@dimen/size_dp_5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_1"
        android:background="@color/color_2ead4d"
        android:layout_marginTop="@dimen/size_dp_5"/>

    <EditText
        android:id="@+id/message_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_50"
        android:background="@drawable/background_gray"
        android:layout_marginTop="@dimen/size_dp_15"
        android:layout_marginLeft="@dimen/size_dp_15"
        android:layout_marginRight="@dimen/size_dp_15"
        android:paddingLeft="@dimen/size_dp_10"
        android:text="@string/title_tips"
        android:maxLength="12"
        android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>

    <EditText
        android:id="@+id/message_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_50"
        android:background="@drawable/background_gray"
        android:layout_marginTop="@dimen/size_dp_10"
        android:layout_marginLeft="@dimen/size_dp_15"
        android:layout_marginRight="@dimen/size_dp_15"
        android:paddingLeft="@dimen/size_dp_10"
        android:text="@string/message_tips"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="message"
            android:layout_marginTop="@dimen/size_dp_20">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_message_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_dp_10"
                android:text="@string/message_text"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:onClick="wx"
            android:layout_marginTop="@dimen/size_dp_20">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_wechat_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_dp_10"
                android:text="@string/wechat_text"/>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>