<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2ead4d">

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_50"
        android:background="@android:color/white">
        <ImageView
            android:layout_width="@dimen/size_dp_100"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_small"
            android:layout_marginLeft="@dimen/size_dp_20"
            android:layout_centerVertical="true"/>
        <!--
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/text_size_sp_18"
            android:textColor="@android:color/black"
            android:text="@string/main_title"/>
            -->
        <TextView
            android:id="@+id/text_connect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/size_dp_10"
            android:text="@string/connect_device"
            android:textSize="@dimen/text_size_sp_16"
            android:textColor="@color/color_2ead4d"
            android:onClick="goSearch"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/device_mac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_dp_30"
        app:layout_constraintTop_toBottomOf="@+id/titleBar"
        android:text="@string/unconnected_device"
        android:textSize="@dimen/text_size_sp_14"
        android:layout_marginTop="@dimen/size_dp_10"
        android:textColor="@android:color/white"/>
    <TextView
        android:id="@+id/app_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size_dp_30"
        app:layout_constraintTop_toTopOf="@+id/reboot_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/reboot_button"
        app:layout_constraintBottom_toBottomOf="@+id/reboot_button"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_sp_14"/>

    <Button
        android:id="@+id/reboot_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/size_dp_40"
        style="@style/Widget.AppCompat.Button.Small"
        app:layout_constraintTop_toBottomOf="@id/device_mac"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/size_dp_20"
        android:textSize="@dimen/text_size_sp_12"
        android:text="ReBoot"
        android:onClick="reBoot"/>

    <LinearLayout
        android:id="@+id/first"
        app:layout_constraintTop_toBottomOf="@id/app_version"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_150"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginRight="@dimen/size_dp_30"
        android:layout_marginLeft="@dimen/size_dp_30"
        android:layout_marginTop="@dimen/size_dp_20">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_676769"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="go2Gsensor">
            <ImageView
                android:layout_width="@dimen/size_dp_70"
                android:layout_height="@dimen/size_dp_40"
                android:src="@mipmap/ic_sensor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sensor"
                android:layout_marginTop="@dimen/size_dp_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_sp_14"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/size_dp_15"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_676769"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="go2HeartRate">
            <ImageView
                android:layout_width="@dimen/size_dp_70"
                android:layout_height="@dimen/size_dp_40"
                android:src="@mipmap/ic_heart_rate"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_heart_rate"
                android:layout_marginTop="@dimen/size_dp_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_sp_14"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second"
        app:layout_constraintTop_toBottomOf="@id/first"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_150"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginRight="@dimen/size_dp_30"
        android:layout_marginLeft="@dimen/size_dp_30"
        android:layout_marginTop="@dimen/size_dp_10">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_676769"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="go2LED">
            <ImageView
                android:layout_width="@dimen/size_dp_70"
                android:layout_height="@dimen/size_dp_40"
                android:src="@mipmap/ic_console"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_console"
                android:layout_marginTop="@dimen/size_dp_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_sp_14"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/size_dp_15"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_676769"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="go2Push">
            <ImageView
                android:layout_width="@dimen/size_dp_70"
                android:layout_height="@dimen/size_dp_40"
                android:src="@mipmap/ic_push"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_push"
                android:layout_marginTop="@dimen/size_dp_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_sp_14"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/third"
        app:layout_constraintTop_toBottomOf="@id/second"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_dp_150"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginRight="@dimen/size_dp_30"
        android:layout_marginLeft="@dimen/size_dp_30"
        android:layout_marginTop="@dimen/size_dp_10">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_676769"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="go2KeyBoard">
            <ImageView
                android:layout_width="@dimen/size_dp_70"
                android:layout_height="@dimen/size_dp_40"
                android:src="@mipmap/ic_keyboard"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_keyboard"
                android:layout_marginTop="@dimen/size_dp_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_sp_14"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/size_dp_15"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/color_676769"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:onClick="go2OTA">
            <ImageView
                android:layout_width="@dimen/size_dp_70"
                android:layout_height="@dimen/size_dp_40"
                android:src="@mipmap/ic_update"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ota"
                android:layout_marginTop="@dimen/size_dp_10"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_sp_14"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
